Added Taylor's Kitchen to "my work" section
Also added description where my team mates names are listed.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <div class="container">
             <h1 class="my-work">My Work - My Portfolio:</h1>
             <div>
+                <a link href="https://isayahdurst.github.io/group-project-1/">Click here to see my web page, "Taylor's Kitchen!"</a>
+                <article class="container">Taylor's Kitchen is our first Group Project from my BootCamp at UC Berkeley Extension. Our group members were myself, Isayah Durst, Frank Nguyen, Anthony Li ,and Benjamin Ha.</article>
                 <div>
                     <img src="./assets/RaZe Games LOGO 4.png" />
                     <div>
