--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <input type="submit" value="Submit">
         </form>
     </div>
-    <script src="./script.js"></script>
+    <script src="./assets/script.js"></script>
     </section>
 </body>
 
