--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div>
                 <a link href="https://isayahdurst.github.io/taylors-kitchen-meal-prep-app/">Click here to see my web page, "Taylor's Kitchen!"</a>
                 <article class="container">Taylor's Kitchen is our first Group Project from my BootCamp at UC Berkeley Extension. Our group members were myself, Isayah Durst, Frank Nguyen, Anthony Li ,and Benjamin Ha.</article>
-                <a link href="https://stream-team.herokuapp.com/">Or click here to see my web page, "Media Map!"</a>
+                <a link href=" https://media-map-app.herokuapp.com">Or click here to see my web page, "Media Map!"</a>
                 <article class="container">Myself, Aidan Espinoza, Braxton Waxdeck, and Charles Cox made this web app for our second project in the UC Berkreley Extension BootCamp.</article>
                 <div>
                     <img src="./assets/RaZe Games LOGO 4.png" />
